[project]
name = "mygm-worker"
version = "0.1.0"
description = "MyGM worker package for ESPN fixture import and scoring foundations."
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mygm-worker = "mygm_worker.cli:main"

[project.optional-dependencies]
dev = [
  "basedpyright>=1.31.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mygm_worker"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:capture"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "COM812",
  "D",
  "EM102",
  "FBT001",
  "PLR0913",
  "PLR2004",
  "S101",
  "S310",
  "T201",
  "TC003",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001"]

[tool.basedpyright]
include = ["mygm_worker", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "all"
